fixed missing color when viewport smaller than interface

--- a/karl/views/static/ux2/css/karl/base.less
+++ b/karl/views/static/ux2/css/karl/base.less
@@ -118,6 +118,7 @@ a.moreToggle {
     .css3_box_shadow(none);
 }
 .sectionContainer {
+    min-width: 1220px;
     font-size: 1.3em;
     .gradientBar(#cfd5da, darken(#cfd5da, 30%));
     text-shadow: none;
@@ -147,6 +148,7 @@ a.moreToggle {
     }
 }
 .contentWrapper {
+    min-width: 1220px;
     .clearfix();
     background-color: @contentBgColor;
     .container {
