--- a/karl/views/static/ux2/css/karl/footer.less
+++ b/karl/views/static/ux2/css/karl/footer.less
@@ -1,4 +1,5 @@
 #footer {
+    min-width: 1220px;
     padding: 1.33em 0;
     .container {
         width: 1190px;
