--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -5262,6 +5262,7 @@ a.moreToggle:before {
   box-shadow: none;
 }
 .sectionContainer {
+  min-width: 1220px;
   font-size: 1.3em;
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
@@ -5302,6 +5303,7 @@ a.moreToggle:before {
   position: relative;
 }
 .contentWrapper {
+  min-width: 1220px;
   *zoom: 1;
   background-color: #f0f2f4;
   padding: 1.33em 0;
@@ -5635,6 +5637,7 @@ form#chatter-post-form button.searchButton {
   background: #333;
   border-bottom: #ffffff;
   height: auto;
+  min-width: 1220px;
   zoom: 1;
   font-size: 1.25em;
   color: #ffffff;
@@ -6085,6 +6088,7 @@ form#search-form span.fieldCoverage:before {
   margin-bottom: -12px;
 }
 #footer {
+  min-width: 1220px;
   padding: 1.33em 0;
 }
 #footer .container {
